objects/ASI_CRM_Route_Type__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Module_Record_Type__c</fullName>
        <label>Module Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_Module__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SPTD Contract</fullName>
                </value>
                <value>
                    <fullName>Direct Rebate Contract</fullName>
                </value>
                <value>
                    <fullName>Indirect Rebate Contract</fullName>
                </value>
                <value>
                    <fullName>SPTD FOC Invoice</fullName>
                </value>
                <value>
                    <fullName>Direct Sales SO</fullName>
                </value>
                <value>
                    <fullName>Entertainment SO</fullName>
                </value>
                <value>
                    <fullName>Sample SO</fullName>
                </value>
                <value>
                    <fullName>Marketing FOC</fullName>
                </value>
                <value>
                    <fullName>Direct Sales Customer</fullName>
                </value>
                <value>
                    <fullName>Price List</fullName>
                </value>
                <value>
                    <fullName>Direct Sales Product Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Plan</fullName>
                </value>
                <value>
                    <fullName>Purchase Contract</fullName>
                </value>
                <value>
                    <fullName>Payment Invoice</fullName>
                </value>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Price List</fullName>
                </value>
                <value>
                    <fullName>Item Base Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JP Managing Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Route_Type_Description__c</fullName>
        <label>Route Type Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Threshold__c</fullName>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Route_Types_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI CRM Route Type</label>
    <listViews>
        <fullName>ASI_CRM_JP_All_Route_Types</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Route_Type_Description__c</columns>
        <columns>ASI_CRM_Module__c</columns>
        <columns>ASI_CRM_Module_Record_Type__c</columns>
        <columns>ASI_CRM_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Route_Type__c.ASI_CRM_JP_Call_Plan_Route_Type</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Route_Type__c.ASI_CRM_JP_SPTD_Route_Type,ASI_CRM_Route_Type__c.ASI_CRM_JP_Rebate_Route_Type</value>
        </filters>
        <label>All JP Route Types</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Route Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI CRM Route Types</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Call_Plan_Route_Type</fullName>
        <active>true</active>
        <label>JP Call Plan Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Customer_Route_Type</fullName>
        <active>true</active>
        <label>JP Customer Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Price_Route_Type</fullName>
        <active>true</active>
        <label>JP Price Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Rebate_Route_Type</fullName>
        <active>true</active>
        <label>JP Rebate Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_SPTD_Route_Type</fullName>
        <active>true</active>
        <label>JP SPTD Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Sales_Order_Route_Type</fullName>
        <active>true</active>
        <label>JP Sales Order Route Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>